feat(docker): added docker, haproxy and embeded swagger docs
