# docs/swagger.json
@@ -326,6 +326,25 @@
                 }
             }
         },
+        "/docs": {
+            "get": {
+                "produces": [
+                    "text/html"
+                ],
+                "tags": [
+                    "System"
+                ],
+                "summary": "Documentation",
+                "responses": {
+                    "200": {
+                        "description": "HTML content",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/health": {
             "get": {
                 "description": "Health Check",
@@ -344,25 +363,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/HealthResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/swagger": {
-            "get": {
-                "produces": [
-                    "text/html"
-                ],
-                "tags": [
-                    "System"
-                ],
-                "summary": "Documentation",
-                "responses": {
-                    "200": {
-                        "description": "HTML content",
-                        "schema": {
-                            "type": "string"
                         }
                     }
                 }
